# Bitcoin-Wallet-Generator

./: Cargo.toml  README.md  run.sh
data/child_keys/: child_keys.json
data/extended_keys/: extended_keys.json
data/wallets/: wallets.json
src/: bip32.rs  bip39.rs  main.rs  wallet.rs  web.rs  webfunctional.rs
