[package]
name = "hd_wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha2 = "0.10"
hmac = "0.12.1"
pbkdf2 = "0.11"
secp256k1 = "0.23"
bitcoin = "0.29"
bitcoin_hashes = "0.11"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
qrcode = "0.7"
axum = "0.6"
tokio = { version = "1", features = ["full"] }